--- a/app/src/main/res/layout/notification_message.xml
+++ b/app/src/main/res/layout/notification_message.xml
@@ -1,38 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
-  <ImageView
-      android:id="@+id/image_icon_noti"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/ic_star"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintEnd_toStartOf="@id/text_title_noti"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
   <TextView
       android:id="@+id/text_title_noti"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Notification"
-      android:layout_marginStart="10dp"
-      android:textSize="24sp"
+      android:layout_marginTop="10dp"
       android:textColor="@color/black"
-      android:textStyle="bold"
-      app:layout_constraintTop_toTopOf="@id/image_icon_noti"
-      app:layout_constraintStart_toEndOf="@id/image_icon_noti"
-      app:layout_constraintBottom_toBottomOf="@id/image_icon_noti"/>
+      android:layout_alignParentTop="true"
+      android:layout_alignParentLeft="true"
+      style="@style/TextAppearance.Compat.Notification.Title"/>
   <TextView
       android:id="@+id/text_message_noti"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="The messaging"
-      android:textSize="22sp"
-      android:textStyle="bold"
-      app:layout_constraintTop_toBottomOf="@id/text_title_noti"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:ellipsize="none"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+      android:layout_below="@id/text_title_noti"
+      style="@style/TextAppearance.Compat.Notification"/>
+  <ImageView
+      android:id="@+id/image_poster_noti"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:scaleType="fitXY"
+      android:src="@drawable/poster_placeholder"
+      android:layout_alignParentEnd="true" />
+</RelativeLayout>
